# pagediff

./: .gitlab-ci.yml  pyproject.toml  requirements.txt  setup.py
pagediff/: __init__.py
